<resources>
    <string name="app_name">GPS Logger</string>
    <string name="button_start">Start</string>
    <string name="button_stop">Stop</string>
    <string name="text_lat">Latitude</string>
    <string name="text_long">Longitude</string>
    <string name="text_speed">Speed</string>
    <string name="label_lat">Latitude :</string>
    <string name="label_long">Longitude :</string>
    <string name="label_speed">Speed :</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="button_view_map">View Map</string>
    <string name="action_settings">Settings</string>
    <string name="appbar_scrolling_view_behavior" translatable="false">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="button_check_permissions">Check Permission</string>
    <string name="button_request_permission">Request Permission</string>
    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>
    <string name="permission_rationale">Permissions are needed for core functionality.</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="title_activity_gps_logs">Map</string>
    <string name="label_fileName">File Name: </string>
    <string name="fileName_value">Analysis_Data</string>
</resources>
