<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/lat_value"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:hint="@string/text_lat"
        app:layout_constraintBaseline_toBaselineOf="@+id/lat_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/lat_label" />

    <TextView
        android:id="@+id/speed_value"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:hint="@string/text_speed"
        app:layout_constraintBaseline_toBaselineOf="@+id/speed_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/speed_label" />

    <TextView
        android:id="@+id/long_value"
        android:layout_width="0dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:hint="@string/text_long"
        app:layout_constraintBaseline_toBaselineOf="@+id/long_label"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/long_label" />

    <TextView
        android:id="@+id/lat_label"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/label_lat"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/long_label"
        app:layout_constraintEnd_toStartOf="@+id/lat_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_view_map"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onViewMap"
        android:text="@string/button_view_map"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_start" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="88dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:onClick="startUpdatesButtonHandler"
        android:text="@string/button_start"
        app:layout_constraintBottom_toTopOf="@+id/button_view_map"
        app:layout_constraintEnd_toStartOf="@+id/button_stop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/speed_label" />

    <TextView
        android:id="@+id/speed_label"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/label_speed"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/button_start"
        app:layout_constraintEnd_toStartOf="@+id/speed_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/long_label" />

    <TextView
        android:id="@+id/long_label"
        android:layout_width="110dp"
        android:layout_height="30dp"
        android:layout_marginStart="16dp"
        android:gravity="center"
        android:text="@string/label_long"
        android:textAlignment="center"
        app:layout_constraintBottom_toTopOf="@+id/speed_label"
        app:layout_constraintEnd_toStartOf="@+id/long_value"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lat_label" />

    <Button
        android:id="@+id/button_stop"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:onClick="stopUpdatesButtonHandler"
        android:text="@string/button_stop"
        app:layout_constraintBaseline_toBaselineOf="@+id/button_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/button_start" />

</androidx.constraintlayout.widget.ConstraintLayout>